[metadata]
url = https://github.com/poldracklab/niworkflows
author = The CRN developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = NeuroImaging Workflows provides processing tools for magnetic resonance images of the brain.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    jinja2
    matplotlib >= 2.2.0 ; python_version >= "3.6"
    matplotlib >= 2.2.0, < 3.1 ; python_version < "3.6"
    nibabel ~= 3.0.0rc1
    nilearn >= 0.2.6, != 0.5.0, != 0.5.1
    nipype >= 1.3.1
    packaging
    pandas
    pybids >= 0.9.4
    PyYAML
    scikit-image == 0.14.4 ; python_version < "3.6"
    scikit-image ; python_version >= "3.6"
    scikit-learn
    scipy
    seaborn
    svgutils
    transforms3d
    templateflow ~= 0.4.2rc1
test_requires =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
packages = find:
include_package_data = True

[options.package_data]
niworkflows =
    data/*.txt
    data/t1-mni_registration*.json
    data/bold-mni_registration*.json
    reports/figures.json
    reports/fmriprep.yml
    reports/report.tpl

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    sphinx >= 2.1.2
    pydot >= 1.2.3
    pydotplus
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
pointclouds =
    pyntcloud
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(pointclouds)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = niworkflows/_version.py
versionfile_build = niworkflows/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2

[coverage:run]
branch = True
omit =
    */tests/*
    niworkflows/_version.py
    niworkflows/conftest.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    raise NotImplementedError
    warnings\.warn
